WIP refactored CLI and standard attributes

--- a/docs/h5wrapper/Conventions.ipynb
+++ b/docs/h5wrapper/Conventions.ipynb
@@ -27,14 +27,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "07f28bd5-1be7-454a-92fa-10233fb0e8e1",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-12T13:55:05.166362Z",
-     "iopub.status.busy": "2022-08-12T13:55:05.166362Z",
-     "iopub.status.idle": "2022-08-12T13:55:06.648187Z",
-     "shell.execute_reply": "2022-08-12T13:55:06.648187Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import h5rdmtoolbox as h5tbx"
@@ -44,246 +37,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "bc29df0c-b117-4ac0-953b-a46fefccb945",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-12T13:55:06.648187Z",
-     "iopub.status.busy": "2022-08-12T13:55:06.648187Z",
-     "iopub.status.idle": "2022-08-12T13:55:06.664124Z",
-     "shell.execute_reply": "2022-08-12T13:55:06.664124Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>canonical_units</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>absolute_pressure</th>\n",
-       "      <td>Pa</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>absolute_pressure_difference</th>\n",
-       "      <td>Pa</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ambient_temperature</th>\n",
-       "      <td>K</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dynamic_pressure</th>\n",
-       "      <td>Pa</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dynamic_pressure_difference</th>\n",
-       "      <td>Pa</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>magnitude_of_velocity</th>\n",
-       "      <td>m/s</td>\n",
-       "      <td>Magnitude of the vector quantity velocity.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pressure</th>\n",
-       "      <td>Pa</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>q_criterion</th>\n",
-       "      <td>1/s**2</td>\n",
-       "      <td>Three dimensional Q-Criterion</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>q_criterion_z</th>\n",
-       "      <td>1/s**2</td>\n",
-       "      <td>Two dimensional Q-Criterion in z plane.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sound_pressure</th>\n",
-       "      <td>Pa</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>static_pressure</th>\n",
-       "      <td>Pa</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>static_pressure_difference</th>\n",
-       "      <td>Pa</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>temperature</th>\n",
-       "      <td>K</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <td>s</td>\n",
-       "      <td>physical time</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>total_pressure</th>\n",
-       "      <td>Pa</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>total_pressure_difference</th>\n",
-       "      <td>Pa</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>turbulent_kinetic_energy</th>\n",
-       "      <td>m**2/s**2</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>x_coordinate</th>\n",
-       "      <td>m</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>x_derivative_of_x_velocity</th>\n",
-       "      <td>1/s</td>\n",
-       "      <td>Derivative of x velocity in x axis direction.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>x_derivative_of_y_velocity</th>\n",
-       "      <td>1/s</td>\n",
-       "      <td>Derivative of y velocity in x axis direction.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>x_derivative_of_z_velocity</th>\n",
-       "      <td>1/s</td>\n",
-       "      <td>Derivative of z velocity in x axis direction.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>x_velocity</th>\n",
-       "      <td>m/s</td>\n",
-       "      <td>velocity is a vector quantity. x indicates the component in x-axis direction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>xx_reynolds_stress</th>\n",
-       "      <td>m**2/s**2</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>xy_reynolds_stress</th>\n",
-       "      <td>m**2/s**2</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>xz_reynolds_stress</th>\n",
-       "      <td>m**2/s**2</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>y_coordinate</th>\n",
-       "      <td>m</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>y_derivative_of_x_velocity</th>\n",
-       "      <td>1/s</td>\n",
-       "      <td>Derivative of x velocity in y axis direction.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>y_derivative_of_y_velocity</th>\n",
-       "      <td>1/s</td>\n",
-       "      <td>Derivative of y velocity in y axis direction.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>y_derivative_of_z_velocity</th>\n",
-       "      <td>1/s</td>\n",
-       "      <td>Derivative of z velocity in y axis direction.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>y_velocity</th>\n",
-       "      <td>m/s</td>\n",
-       "      <td>velocity is a vector quantity. y indicates the component in y-axis direction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>yx_reynolds_stress</th>\n",
-       "      <td>m**2/s**2</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>yy_reynolds_stress</th>\n",
-       "      <td>m**2/s**2</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>yz_reynolds_stress</th>\n",
-       "      <td>m**2/s**2</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z_coordinate</th>\n",
-       "      <td>m</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z_derivative_of_x_velocity</th>\n",
-       "      <td>1/s</td>\n",
-       "      <td>Derivative of x velocity in z axis direction.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z_derivative_of_y_velocity</th>\n",
-       "      <td>1/s</td>\n",
-       "      <td>Derivative of y velocity in z axis direction.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z_derivative_of_z_velocity</th>\n",
-       "      <td>1/s</td>\n",
-       "      <td>Derivative of z velocity in z axis direction.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z_velocity</th>\n",
-       "      <td>m/s</td>\n",
-       "      <td>velocity is a vector quantity. z indicates the component in z-axis direction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z_vorticity</th>\n",
-       "      <td>1/s</td>\n",
-       "      <td>vorticity is a vector quantity. z indicates the component in z-axis direction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>zx_reynolds_stress</th>\n",
-       "      <td>m**2/s**2</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>zy_reynolds_stress</th>\n",
-       "      <td>m**2/s**2</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>zz_reynolds_stress</th>\n",
-       "      <td>m**2/s**2</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "AttributeError",
+     "evalue": "module 'h5rdmtoolbox.conventions' has no attribute 'FluidStandardNameTable'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mh5tbx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconventions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFluidStandardNameTable\u001b[49m\u001b[38;5;241m.\u001b[39mdump()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'h5rdmtoolbox.conventions' has no attribute 'FluidStandardNameTable'"
+     ]
     }
    ],
    "source": [
@@ -301,27 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ac079705-9278-4809-9f4a-73dce277a637",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-12T13:55:06.666321Z",
-     "iopub.status.busy": "2022-08-12T13:55:06.666321Z",
-     "iopub.status.idle": "2022-08-12T13:55:06.680043Z",
-     "shell.execute_reply": "2022-08-12T13:55:06.680043Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Standardized name \"test\" not in name table\n",
-      "Name must not start with a number!\n",
-      "True\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "try:\n",
     "    h5tbx.conventions.FluidStandardNameTable.check_name('test', strict=True)\n",
@@ -338,37 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "09ea220f-026b-4697-834d-4b3ce8267b8f",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-12T13:55:06.683207Z",
-     "iopub.status.busy": "2022-08-12T13:55:06.680043Z",
-     "iopub.status.idle": "2022-08-12T13:55:06.696001Z",
-     "shell.execute_reply": "2022-08-12T13:55:06.696001Z"
-    }
+    "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "Standardized name \"test\" not in name table\n",
-      "Unit of standard name \"x_velocity\" not as expected: \"m\" != \"m/s\"\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(h5tbx.conventions.FluidStandardNameTable.check_name('x_velocity', strict=False))\n",
     "\n",
