--- a/docs/conventions/conventions.ipynb
+++ b/docs/conventions/conventions.ipynb
@@ -41,7 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "h5tbx.conventions.identifier.STRICT = False"
+    "h5tbx.conventions.standard_attributes.standard_name.STRICT = False"
    ]
   },
   {
@@ -52,7 +52,7 @@
     "## Initialize a Standard Name Convention\n",
     "A standardized name table is a XML document, which contains (at least) a description and a canonical unit for a standarized name. We'll build one from scratch first and then have a look into already implemented ones:\n",
     "\n",
-    "Call `StandardizedNameTable` from the sub-package `conventions` and provide a `name`, `version`, `table_dict`, `contact` and and `insitution`:"
+    "Call `StandardNameTable` from the sub-package `conventions` and provide a `name`, `version`, `table_dict`, `contact` and and `insitution`:"
    ]
   },
   {
@@ -64,7 +64,7 @@
    },
    "outputs": [],
    "source": [
-    "sc = h5tbx.conventions.StandardizedNameTable(name='Test_SNC', table_dict={}, version_number=1, contact='contact@python.com', institution='my_institution')\n",
+    "sc = h5tbx.conventions.StandardNameTable(name='Test_SNC', table={}, version_number=1, contact='contact@python.com', institution='my_institution')\n",
     "sc"
    ]
   },
@@ -173,7 +173,7 @@
    "outputs": [],
    "source": [
     "sc.register(overwrite=True)\n",
-    "h5tbx.conventions.StandardizedNameTable.print_registered()"
+    "h5tbx.conventions.StandardNameTable.print_registered()"
    ]
   },
   {
@@ -213,11 +213,11 @@
    },
    "outputs": [],
    "source": [
-    "sc_test = h5tbx.conventions.StandardizedNameTable.from_xml(xml_filename)\n",
-    "print(sc_test.versionname)\n",
-    "sc_test.dump()\n",
+    "# sc_test = h5tbx.conventions.StandardNameTable.from_xml(xml_filename)\n",
+    "# print(sc_test.versionname)\n",
+    "# sc_test.dump()\n",
     "\n",
-    "sc_test = h5tbx.conventions.StandardizedNameTable.from_yml(yml_filename)\n",
+    "sc_test = h5tbx.conventions.StandardNameTable.from_yaml(yml_filename)\n",
     "print(sc_test.versionname)\n",
     "sc_test.dump()"
    ]
@@ -237,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h5tbx.conventions.StandardizedNameTable.load_registered('Test_SNC-v1').dump()"
+    "h5tbx.conventions.StandardNameTable.load_registered('Test_SNC-v1').dump()"
    ]
   },
   {
@@ -256,8 +256,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cf = h5tbx.conventions.StandardizedNameTable.from_web(url='https://cfconventions.org/Data/cf-standard-names/79/src/cf-standard-name-table.xml')\n",
+    "cf = h5tbx.conventions.StandardNameTable.from_web(url='https://cfconventions.org/Data/cf-standard-names/79/src/cf-standard-name-table.xml')\n",
     "cf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b51e8fb3-e174-41e8-9737-c5ebf8fccb3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cf.versionname"
    ]
   },
   {
