--- a/docs/h5database/h5mongo.ipynb
+++ b/docs/h5database/h5mongo.ipynb
@@ -12,10 +12,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1e3c96fc-62ac-4462-8e87-d131aeb52c53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp: C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'0.1.12'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pymongo\n",
     "from pymongo import MongoClient\n",
@@ -41,10 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b40e8640-b166-4792-913b-6ce39765eef4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client = MongoClient()\n",
     "client"
@@ -60,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a8f3cb21-e1e3-4969-9103-a48ac49547b9",
    "metadata": {},
    "outputs": [],
@@ -83,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "39a40ef7-e186-4bdb-ac3e-427e61f9bbc8",
    "metadata": {},
    "outputs": [],
@@ -94,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "111e3c0d-6d5d-4931-9aac-e4f9e6575088",
    "metadata": {},
    "outputs": [],
@@ -113,10 +142,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "3c7f5e27-c173-4a14-941c-2614466219a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<head><style>/*\r\n",
+       "CSS inspired by xarray: https://github.com/pydata/xarray\r\n",
+       "*/\r\n",
+       ".h5tb-header > div,\r\n",
+       ".h5tb-header > ul {\r\n",
+       "    display: inline;\r\n",
+       "    margin-top: 0;\r\n",
+       "    margin-bottom: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataarray-cls,\r\n",
+       ".h5tb-dataarray-name {\r\n",
+       "    margin-left: 2px;\r\n",
+       "    margin-right: 10px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataarray-name {\r\n",
+       "    color: #000;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections {\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 3px;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections label {\r\n",
+       "    display: inline;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label > span {\r\n",
+       "    display: inline;\r\n",
+       "    margin-left: 4px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:checked + label > span {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:enabled + label {\r\n",
+       "    cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:not(.h5tb-values-in) ~ ul {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:not(.h5tb-values-in):checked ~ ul {\r\n",
+       "    display: block;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label {\r\n",
+       "    width: 140px;\r\n",
+       "    color: #555;\r\n",
+       "    font-weight: 500;\r\n",
+       "    padding: 4px 0 2px 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label:before {\r\n",
+       "    display: inline-block;\r\n",
+       "    content: '+';\r\n",
+       "    font-size: 11px;\r\n",
+       "    width: 15px;\r\n",
+       "    text-align: center;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:disabled + label:before {\r\n",
+       "    color: #777;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:checked + label:before {\r\n",
+       "    content: '-';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list {\r\n",
+       "    display: inline-block !important;\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list li {\r\n",
+       "    display: inline-block;\r\n",
+       "    padding: 0;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list:before {\r\n",
+       "    content: '(';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list:after {\r\n",
+       "    content: ')';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list li:not(:last-child):after {\r\n",
+       "    content: ',';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-has-index {\r\n",
+       "    text-decoration: underline;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list {\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 0;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list > li {\r\n",
+       "    background-color: #fcfcfc;\r\n",
+       "    overflow: hidden;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list > li:nth-child(odd) {\r\n",
+       "    background-color: #efefef;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list li:hover {\r\n",
+       "    background-color: rgba(3, 169, 244, .2);\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list li > span {\r\n",
+       "    display: inline-block;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in + label {\r\n",
+       "    width: 140px;\r\n",
+       "    padding-left: 0;\r\n",
+       "    font-weight: bold;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataset {\r\n",
+       "    width: 100px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attributevalue {\r\n",
+       "    width: 100px;\r\n",
+       "    text-align: left;\r\n",
+       "    color: #888;\r\n",
+       "    white-space: nowrap;\r\n",
+       "    font-size: 12px;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in + label:before {\r\n",
+       "    content: ' ';\r\n",
+       "    display: inline-block;\r\n",
+       "    font-size: 11px;\r\n",
+       "    width: 15px;\r\n",
+       "    padding-left: 2px;\r\n",
+       "    padding-right: 2px;\r\n",
+       "    text-align: center;\r\n",
+       "    color: #aaa;\r\n",
+       "    text-decoration: none !important;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in:enabled + label:hover:before {\r\n",
+       "    color: #000;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in:checked + label:before {\r\n",
+       "    color: #ccc;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dims {\r\n",
+       "    width: 280px;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       ".h5tb-unit {\r\n",
+       "    width: 96px;\r\n",
+       "    white-space: nowrap;\r\n",
+       "    padding-right: 2px;\r\n",
+       "    text-align: right;\r\n",
+       "    color: #555;\r\n",
+       "    font-style: italic;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attr-list {\r\n",
+       "    list-style: none;\r\n",
+       "    background-color: #fff;\r\n",
+       "    padding-bottom: 6px;\r\n",
+       "    color: #555;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attr-list li,\r\n",
+       ".h5tb-attr-list li:hover {\r\n",
+       "    background-color: #fff;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-highlight {\r\n",
+       "    background-color: rgba(3, 169, 244, .2);\r\n",
+       "    cursor: pointer;\r\n",
+       "}</style></head>\n",
+       "<p>tmp3</p>\n",
+       "<p>Check resuted in 1 issues.</p>\n",
+       "\n",
+       "<div class='h5tb-warp'>\n",
+       "\n",
+       "          <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "                <li>\n",
+       "                    <input id=\"group-ds-/-117974359700\" type=\"checkbox\" checked>\n",
+       "                    <label style=\"font-weight: bold\" for=\"group-ds-/-117974359700\">\n",
+       "                    /<span>(5)</span></label>\n",
+       "              \n",
+       "\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.1.12</li><li style=\"list-style-type: none; font-style: italic\">__wrcls__ : H5File</li>\n",
+       "                </ul>\n",
+       "\n",
+       "                    <ul id=\"ds-1-/correlation-117975558100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/correlation-117975560700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' \n",
+       "                        for=\"ds-2-/correlation-117975560700\">correlation</label>\n",
+       "                    <span class=\"h5tb-dims\">(1797,)</span>  [\n",
+       "                    <span class=\"h5tb-unit\">count</span>]\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : correlation</li>\n",
+       "\n",
+       "                </ul>\n",
+       "\n",
+       "             </ul>\n",
+       "             \n",
+       "\n",
+       "                    <ul id=\"ds-1-/digit-117976077400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/digit-117976079800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' \n",
+       "                        for=\"ds-2-/digit-117976079800\">digit</label>\n",
+       "                    <span class=\"h5tb-dims\">(1797,)</span>  [\n",
+       "                    <span class=\"h5tb-unit\">-</span>]\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : true digit</li>\n",
+       "\n",
+       "                </ul>\n",
+       "\n",
+       "             </ul>\n",
+       "             \n",
+       "\n",
+       "                    <ul id=\"ds-1-/dissimilarity-117976497600\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/dissimilarity-117976501000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' \n",
+       "                        for=\"ds-2-/dissimilarity-117976501000\">dissimilarity</label>\n",
+       "                    <span class=\"h5tb-dims\">(1797,)</span>  [\n",
+       "                    <span class=\"h5tb-unit\">count</span>]\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : dissimilarity</li>\n",
+       "\n",
+       "                </ul>\n",
+       "\n",
+       "             </ul>\n",
+       "             \n",
+       "\n",
+       "                    <ul id=\"ds-1-/images-117977011000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/images-117977014500\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' \n",
+       "                        for=\"ds-2-/images-117977014500\">images</label>\n",
+       "                    <span class=\"h5tb-dims\">(digit: 1797)</span>  [\n",
+       "                    <span class=\"h5tb-unit\">pixel</span>]\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : image of hand-written digit</li>\n",
+       "\n",
+       "                </ul>\n",
+       "\n",
+       "             </ul>\n",
+       "             \n",
+       "\n",
+       "                    <ul id=\"ds-1-/mean-117977276100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/mean-117977278200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' \n",
+       "                        for=\"ds-2-/mean-117977278200\">mean</label>\n",
+       "                    <span class=\"h5tb-dims\">(1797,)</span>  [\n",
+       "                    <span class=\"h5tb-unit\">count</span>]\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : mean counts of the image</li>\n",
+       "\n",
+       "                </ul>\n",
+       "\n",
+       "             </ul>\n",
+       "             \n",
+       "</li>\n",
+       "</ul>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from skimage.feature import graycomatrix, graycoprops\n",
     "\n",
@@ -159,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "16c8fddc-d3f2-4987-925f-db07a1337b8b",
    "metadata": {},
    "outputs": [],
@@ -169,13 +491,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "40d84010-8add-4b34-b090-64340880bcf9",
    "metadata": {},
    "outputs": [],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
-    "    h5['images'].mongo.insert(0, collection)"
+    "    h5['images'].mongo.insert(0, collection, update=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd81f6a0-7628-4785-9d76-c5d05422a8dd",
+   "metadata": {},
+   "source": [
+    "Count the number of collections inserted:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "951f2bec-1e21-4f17-8932-6cb6a2d1edc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3594"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection.count_documents({})"
    ]
   },
   {
@@ -188,10 +539,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3764848c-5c4f-419c-83ed-fde5bf108d0c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('631efe87037a49b2d4a8673f'),\n",
+       " 'filename': 'C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp1\\\\tmp3',\n",
+       " 'name': '/images',\n",
+       " 'basename': 'images',\n",
+       " 'file_creation_time': datetime.datetime(2022, 9, 12, 9, 40, 19, 703000),\n",
+       " 'shape': [1797, 8, 8],\n",
+       " 'ndim': 3,\n",
+       " 'hdfobj': 'dataset',\n",
+       " 'slice': [[3, 4, 1], [0, None, 1], [0, None, 1]],\n",
+       " 'digit': 3,\n",
+       " 'mean': 4.171875,\n",
+       " 'dissimilarity': 4.875,\n",
+       " 'correlation': -0.3547935485839844,\n",
+       " 'long_name': 'image of hand-written digit',\n",
+       " 'units': 'pixel'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "one_res = collection.find_one({'digit': {'$eq': 3}})\n",
     "one_res"
