--- a/docs/h5wrapper/Conventions.ipynb
+++ b/docs/h5wrapper/Conventions.ipynb
@@ -25,34 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "07f28bd5-1be7-454a-92fa-10233fb0e8e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import h5rdmtoolbox as h5tbx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "bc29df0c-b117-4ac0-953b-a46fefccb945",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'h5rdmtoolbox.conventions' has no attribute 'FluidStandardNameTable'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mh5tbx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconventions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFluidStandardNameTable\u001b[49m\u001b[38;5;241m.\u001b[39mdump()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'h5rdmtoolbox.conventions' has no attribute 'FluidStandardNameTable'"
-     ]
-    }
-   ],
-   "source": [
-    "h5tbx.conventions.FluidStandardNameTable.dump()"
    ]
   },
   {
@@ -67,45 +45,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac079705-9278-4809-9f4a-73dce277a637",
+   "id": "03fd739b-32e4-4829-9ded-dfe4db3d95cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    h5tbx.conventions.FluidStandardNameTable.check_name('test', strict=True)\n",
-    "except h5tbx.conventions.StandardizedNameError as e:\n",
-    "    print(e)\n",
-    "    \n",
-    "try:\n",
-    "    h5tbx.conventions.FluidStandardNameTable.check_name('1234test', strict=False)\n",
-    "except h5tbx.conventions.StandardizedNameError as e:\n",
-    "    print(e)\n",
-    "    \n",
-    "print(h5tbx.conventions.FluidStandardNameTable.check_name('test', strict=False))"
+    "h5tbx.conventions.StandardNameTable.print_registered()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09ea220f-026b-4697-834d-4b3ce8267b8f",
-   "metadata": {
-    "tags": []
-   },
+   "id": "29ded965-8a48-44fa-8150-70dd1647b531",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print(h5tbx.conventions.FluidStandardNameTable.check_name('x_velocity', strict=False))\n",
-    "\n",
+    "snt = h5tbx.conventions.StandardNameTable.load_registered('piv-v1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d31c136a-27d7-4c4d-911a-a8197ba0a79d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snt.check_name('x_coordinate', strict=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac079705-9278-4809-9f4a-73dce277a637",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "try:\n",
-    "    h5tbx.conventions.FluidStandardNameTable.check_units('test', 'm')\n",
-    "except h5tbx.conventions.StandardizedNameError as e:\n",
+    "    snt.check_name('test', strict=True)\n",
+    "except h5tbx.errors.StandardNameError as e:\n",
     "    print(e)\n",
     "    \n",
     "try:\n",
-    "    h5tbx.conventions.FluidStandardNameTable.check_units('x_velocity', 'm')\n",
-    "except h5tbx.conventions.StandardizedNameError as e:\n",
-    "    print(e)\n",
-    "    \n",
-    "h5tbx.conventions.FluidStandardNameTable.check_units('x_velocity', 'm/s')"
+    "    snt.check_name('1234test', strict=False)\n",
+    "except h5tbx.errors.StandardNameError as e:\n",
+    "    print(e)"
    ]
   }
  ],
