update docs and version

--- a/docs/conventions/conventions.ipynb
+++ b/docs/conventions/conventions.ipynb
@@ -325,33 +325,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a77d1c78-6a18-434d-b483-5cfeb049fd37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from h5rdmtoolbox.conventions.identifier import _units_power_fix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a773fd35-a187-4bd3-a083-d944b8347130",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_units_power_fix('degree')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6497fe45-cb00-4566-9031-4fdad221ccff",
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
     "    cf.check_units('zenith_angle', units='K')\n",
-    "except h5tbx.conventions.StandardizedNameError as e:\n",
+    "except h5tbx.errors.StandardNameError as e:\n",
     "    print(e)\n",
     "cf.check_units('zenith_angle', units='degree')"
    ]
@@ -413,6 +393,14 @@
    "source": [
     "! h5tbx standard_name -f {h5.hdf_filename} -s {cf.versionname}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "131d28c1-6d89-464e-bc25-17cb9f58d63d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
