--- a/docs/conventions/conventions.ipynb
+++ b/docs/conventions/conventions.ipynb
@@ -14,12 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3026a8e2-ebf6-48aa-9bd6-9d915b9672d9",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp: C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp107\n"
+     ]
+    }
+   ],
    "source": [
     "import h5rdmtoolbox as h5tbx"
    ]
@@ -34,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "52a96fd3-318c-4e0a-8c57-82cfcb170480",
    "metadata": {
     "tags": []
@@ -57,12 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "569b7ff4-5e17-4eda-9e8b-d449277f203e",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Test_SNC (version number: 1)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sc = h5tbx.conventions.StandardNameTable(name='Test_SNC', table={}, version_number=1, contact='contact@python.com', institution='my_institution')\n",
     "sc"
@@ -78,10 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "77561296-edfe-476c-b316-553c1ff92cee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x_velocity': {'canonical_units': 'm/s',\n",
+       "  'description': 'velocity is a vector quantity.'}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tabledict = {'x_velocity': dict(canonical_units='m/s', description='velocity is a vector quantity.')}\n",
     "tabledict"
@@ -97,10 +128,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1c3230f1-2a0d-4b09-b885-3b6a8a16fe83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>canonical_units</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>x_velocity</th>\n",
+       "      <td>m/s</td>\n",
+       "      <td>velocity is a vector quantity.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "sc.update(tabledict)\n",
     "sc.dump()"
@@ -116,12 +175,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9e4ce9fe-de0e-4e3c-9410-e5dc891294af",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test_SNC (version: 1)\n",
+      "+------------+-------------------+------------------------------------------------------------------------------+\n",
+      "|            | canonical_units   | description                                                                  |\n",
+      "|------------+-------------------+------------------------------------------------------------------------------|\n",
+      "| time       | s                 | physical time                                                                |\n",
+      "| x_velocity | m/s               | velocity is a vector quantity. x indicates the component in y-axis direction |\n",
+      "| y_velocity | m/s               | velocity is a vector quantity. y indicates the component in y-axis direction |\n",
+      "| z_velocity | m/s               | velocity is a vector quantity. z indicates the component in z-axis direction |\n",
+      "+------------+-------------------+------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
    "source": [
     "sc.set('time', canonical_units='s', description='physical time')\n",
     "sc.modify('x_velocity', canonical_units='m/s', description='velocity is a vector quantity. x indicates the component in y-axis direction')\n",
@@ -142,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7d29f972-b6c2-4a25-85cc-8d8c39f28154",
    "metadata": {
     "tags": []
@@ -167,10 +242,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d4e396b6-9564-4e39-aba8-0c8e9ebbef90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " > cgns-v1\n",
+      " > cgns_ext-v1\n",
+      " > fluid-v1\n",
+      " > operation_point_convention-v1\n",
+      " > piv-v1\n",
+      " > standard_name_table-v79\n",
+      " > synpiv-v1\n",
+      " > Test_SNC-v1\n"
+     ]
+    }
+   ],
    "source": [
     "sc.register(overwrite=True)\n",
     "h5tbx.conventions.StandardNameTable.print_registered()"
@@ -186,10 +276,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3fe3ac64-a900-407c-ac09-69ec7187a538",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp: C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp113\n",
+      " > cgns-v1\n",
+      " > cgns_ext-v1\n",
+      " > fluid-v1\n",
+      " > operation_point_convention-v1\n",
+      " > piv-v1\n",
+      " > standard_name_table-v79\n",
+      " > synpiv-v1\n",
+      " > Test_SNC-v1\n"
+     ]
+    }
+   ],
    "source": [
     "! h5tbx standard_name -l"
    ]
@@ -206,12 +312,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "be7625e3-349d-49bd-a14c-e9b2f220da91",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test_SNC-v1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>canonical_units</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <td>s</td>\n",
+       "      <td>physical time</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>x_velocity</th>\n",
+       "      <td>m/s</td>\n",
+       "      <td>velocity is a vector quantity. x indicates the component in y-axis direction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>y_velocity</th>\n",
+       "      <td>m/s</td>\n",
+       "      <td>velocity is a vector quantity. y indicates the component in y-axis direction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>z_velocity</th>\n",
+       "      <td>m/s</td>\n",
+       "      <td>velocity is a vector quantity. z indicates the component in z-axis direction</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# sc_test = h5tbx.conventions.StandardNameTable.from_xml(xml_filename)\n",
     "# print(sc_test.versionname)\n",
@@ -220,6 +376,27 @@
     "sc_test = h5tbx.conventions.StandardNameTable.from_yaml(yml_filename)\n",
     "print(sc_test.versionname)\n",
     "sc_test.dump()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3cbe804a-0868-43c6-ae92-f813e4fed72a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Test_SNC (version number: 1)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sc_test['x_velocity'].snt"
    ]
   },
   {
@@ -232,10 +409,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f3861a50-33bc-4625-80d3-6ef95deeddf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>canonical_units</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <td>s</td>\n",
+       "      <td>physical time</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>x_velocity</th>\n",
+       "      <td>m/s</td>\n",
+       "      <td>velocity is a vector quantity. x indicates the component in y-axis direction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>y_velocity</th>\n",
+       "      <td>m/s</td>\n",
+       "      <td>velocity is a vector quantity. y indicates the component in y-axis direction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>z_velocity</th>\n",
+       "      <td>m/s</td>\n",
+       "      <td>velocity is a vector quantity. z indicates the component in z-axis direction</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "h5tbx.conventions.StandardNameTable.load_registered('Test_SNC-v1').dump()"
    ]
@@ -251,10 +471,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "49060588-f59a-415b-b0ca-55afbf4f609a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "standard_name_table (version number: 79)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cf = h5tbx.conventions.StandardNameTable.from_web(url='https://cfconventions.org/Data/cf-standard-names/79/src/cf-standard-name-table.xml')\n",
     "cf"
@@ -262,20 +493,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b51e8fb3-e174-41e8-9737-c5ebf8fccb3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'standard_name_table-v79'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cf.versionname"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "24fcc5e1-6c7a-43ce-a370-47ebe5449ba5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>canonical_units</th>\n",
+       "      <th>grib</th>\n",
+       "      <th>amip</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>acoustic_signal_roundtrip_travel_time_in_sea_water</th>\n",
+       "      <td>s</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The quantity with standard name acoustic_signal_roundtrip_travel_time_in_sea_water is the time taken for an acoustic signal to propagate from the emitting instrument to a reflecting surface and back again to the instrument. In the case of an instrument based on the sea floor and measuring the roundtrip time to the sea surface, the data are commonly used as a measure of ocean heat content.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>aerodynamic_particle_diameter</th>\n",
+       "      <td>m</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The diameter of a spherical particle with density 1000 kg m-3 having the same aerodynamic properties as the particles in question.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>y_wind_gust</th>\n",
+       "      <td>m s-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>\"y\" indicates a vector component along the grid y-axis, positive with increasing y. Wind is defined as a two-dimensional (horizontal) air velocity vector, with no vertical component. (Vertical motion in the atmosphere has the standard name upward_air_velocity.) A gust is a sudden brief period of high wind speed. In an observed time series of wind speed, the gust wind speed can be indicated by a cell_methods of maximum for the time-interval. In an atmospheric model which has a parametrised calculation of gustiness, the gust wind speed may be separately diagnosed from the wind speed.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zenith_angle</th>\n",
+       "      <td>degree</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Zenith angle is the angle to the local vertical; a value of zero is directly overhead.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "cf.dump(max_rows=4)"
    ]
@@ -291,27 +593,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ae55dbd6-af9a-4346-b232-b9f4fed3e436",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cf.check_name('zenith_angle', strict=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7ef1281b-1b74-4143-b57e-299735526941",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "m/s"
+      ],
+      "text/latex": [
+       "$\\frac{\\mathrm{m}}{\\mathrm{s}}$"
+      ],
+      "text/plain": [
+       "<Unit('meter / second')>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cf['x_wind_gust'].canonical_units"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "67174d49-18b5-4c47-af61-36e391f85eb0",
    "metadata": {},
    "outputs": [],
@@ -324,34 +654,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a77d1c78-6a18-434d-b483-5cfeb049fd37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from h5rdmtoolbox.conventions.identifier import _units_power_fix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a773fd35-a187-4bd3-a083-d944b8347130",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_units_power_fix('degree')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6497fe45-cb00-4566-9031-4fdad221ccff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"deg\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "try:\n",
     "    cf.check_units('zenith_angle', units='K')\n",
-    "except h5tbx.conventions.StandardizedNameError as e:\n",
+    "except h5tbx.errors.StandardNameError as e:\n",
     "    print(e)\n",
     "cf.check_units('zenith_angle', units='degree')"
    ]
@@ -366,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "fbf33dbe-4453-482e-8cd9-2462bf7f81c0",
    "metadata": {},
    "outputs": [],
@@ -378,10 +706,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ef3f5cbe-4106-469c-a85d-d5517be154d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"deg\"\n"
+     ]
+    }
+   ],
    "source": [
     "cf.check_file(h5.hdf_filename, raise_error=False)"
    ]
@@ -396,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "0fd0adab-2a27-456d-96bb-c3f07e9773f6",
    "metadata": {},
    "outputs": [],
@@ -406,13 +742,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "ba85f48f-9c41-4a24-b267-c182ff400e2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp: C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp113\n",
+      " > Checking file \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp107\\tmp2.hdf\" with standard name table \"standard_name_table-v79\"\n",
+      " > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"deg\"\n"
+     ]
+    }
+   ],
    "source": [
     "! h5tbx standard_name -f {h5.hdf_filename} -s {cf.versionname}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f10c7e4-8551-4ad6-86b8-6b1bb300d6da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
