--- a/docs/gettingstarted/quickoverview.ipynb
+++ b/docs/gettingstarted/quickoverview.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "## Create a dataset\n",
     "\n",
-    "Assume we have a signal over time as numpy-arrays. We create two datasets for them. As signal is a function of time, we use HDF dimension scales (https://docs.h5py.org/en/stable/high/dims.html)  to make the relationship:"
+    "Assume we have a signal over time as numpy-arrays. We create two datasets for them. As signal is a function of time, we use HDF dimension scales (https://docs.h5py.org/en/stable/high/dims.html) to make the relationship, thus \"time\" is the scale (`make_scale=True`) to which \"signal\" is attached to (`attach_scale`)."
    ]
   },
   {
@@ -117,7 +117,7 @@
    "metadata": {},
    "source": [
     "## Plot a data\n",
-    "Plotting data is simple as the return value of a sliced HDF dataset is a `xr.DataArray` which, thanks to the package `xarray`, provides a plotting function:"
+    "Plotting data is simple: The return value of a sliced HDF dataset is a `xr.DataArray`. Thanks to the package `xarray`, provides a plotting function:"
    ]
   },
   {
@@ -179,9 +179,7 @@
    "outputs": [],
    "source": [
     "with h5tbx.H5File(signal_filename) as h5:\n",
-    "    h5.dump()\n",
-    "    print('+-----------------+\\n')\n",
-    "    h5.sdump()"
+    "    h5.dump()"
    ]
   },
   {
