--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! h5tbx layout -l"
+    "! h5tbx layout --list-registered"
    ]
   },
   {
