--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -144,7 +144,7 @@
     "    pass\n",
     "\n",
     "#open with h5tbx and perform a check:\n",
-    "with h5tbx.H5File(filename) as h5:\n",
+    "with h5tbx.H5File(filename, layout='H5File') as h5:\n",
     "    print('run check')\n",
     "    h5.check()\n",
     "    \n",
